fixed issue with images not showing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,6 @@
 .header-box{
     padding: 25px;
-    background-color: cornflowerblue;
+    background-color:cadetblue;
     width: 20%
     
     
@@ -9,10 +9,11 @@
 .crystal-image {
     width: 300px;
     height: 300px;
+    padding: 15px;
   }
 
 #score{
-    background-color: blue;
+    background-color:cadetblue;
     width: 4%;
     padding:15px;
 }
@@ -20,4 +21,8 @@
 .wins{
     display: inline;
     
+}
+
+body{
+    background-color: goldenrod;
 }
